# Langgraph_traning

./: .cursorignore  .env.example  .gitignore  IMPL.md  README.md  TODO.md  TODO_phase2.md  TODO_phase3.md  hello_world.py  path_setup.py  practice_01.py  practice_02_model_smoke.py  practice_03_tool_manual.py  practice_04_agent_graph.py  practice_06_checkpoint_memory.py  practice_07_interrupt_hitl.py  practice_08_stream_agent.py  practice_09_state_fields.py  practice_10_i2_intent_router.py  practice_10_subgraph_or_router.py  practice_11_rag_tool.py  practice_12_message_preprocess.py  practice_13_async_agent.py  practice_14_fastapi_agent.py  practice_15_eval_smoke.py  practice_16_rag_advanced_smoke.py  pyproject.toml
.cursor/rules/: document.mdc  general.mdc  git.mdc  langgraph_ai.mdc  python.mdc
.github/workflows/: pytest.yml
Docs/: checkpointer_in_services.md  env_and_run.md  l1_l2_l4_async_diff.md  langsmith_setup.md  logging_setup.md  reference_rules.md  requirements.txt
LessonLearn/: What_is_BM25_tokenize.md  how_outgraph_update_and_share_state.md  how_stream_and_enumerate_work_together.md  how_to_deal_with_AIMessageChunk.md  how_to_use_f2_lesson_command.md  what_is_N2_going_to_do.md  what_is_RRF.md  what_is_annotation.md  what_is_different_between_CRag_Adaptive_Rag.md  what_is_different_between_long_short_memories.md  what_is_different_from_ToolException_and_handle_tool_error.md  what_is_rerand_and_hybrid.md  why_can_not_import_ToolNode.md  why_do_not_have_ModelNode.md  why_use_closure.md
evaluation/datasets/: m1_golden_cases.json  (+1 more)
tests/: test_eval_smoke.py
(+26 files in other folders)
